--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
 tracing = "0.1.40"
-warframe = { version = "6.0.0", features = ["worldstate_listeners"] }
+warframe = { version = "6.0.1", features = ["full"] }
 arbitration_data = { git = "https://github.com/Mettwasser/arbitration_data", version = "0.2.0" }
 csv = "1.3.0"
-derive_more = "0.99.18"
+derive_more = { version = "1.0.0", features = ["full"] }
 itertools = "0.13.0"
 strsim = "0.11.1"
 thiserror = "1.0.63"
