--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = { version = "1.38.0", features = ["full"] }
 tracing = "0.1.40"
-warframe = { version = "6.0.1", features = ["full"] }
+warframe = { version = "6.1.0", features = ["full"] }
 arbitration_data = { git = "https://github.com/Mettwasser/arbitration_data", version = "0.2.0" }
 csv = "1.3.0"
 derive_more = { version = "1.0.0", features = ["full"] }
@@ -22,6 +22,8 @@ itertools = "0.13.0"
 strsim = "0.11.1"
 thiserror = "1.0.63"
 tracing-subscriber = "0.3.18"
+moka = { version = "0.12.8", features = ["future"] }
+futures = "0.3.31"
 
 [lints.rust]
 rust_2018_idioms = "deny"
