--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ thiserror = "1.0.63"
 tracing-subscriber = "0.3.18"
 moka = { version = "0.12.8", features = ["future"] }
 futures = "0.3.31"
+indoc = "2.0.5"
+strum = { version = "0.26.3", features = ["derive"] }
 
 [lints.rust]
 rust_2018_idioms = "deny"
