--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,26 +6,27 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version = "0.4.38", features = ["serde"] }
+chrono = { version = "0.4.41", features = ["serde"] }
 dotenv = "0.15.0"
-log = "0.4.21"
+log = "0.4.27"
 poise = { version = "0.6.1", features = ["handle_panics"] }
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.117"
-tokio = { version = "1.38.0", features = ["full"] }
-tracing = "0.1.40"
-warframe = { version = "6.1.0", features = ["full"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.141"
+tokio = { version = "1.46.1", features = ["full"] }
+tracing = "0.1.41"
+warframe = { version = "7.0.1", features = ["full"] }
 arbitration_data = { git = "https://github.com/Mettwasser/arbitration_data", version = "0.2.0" }
-csv = "1.3.0"
-derive_more = { version = "1.0.0", features = ["full"] }
-itertools = "0.13.0"
+poise_paginator = { git = "https://github.com/Mettwasser/poise_paginator", version = "0.1.1" }
+csv = "1.3.1"
+derive_more = { version = "2.0.1", features = ["full"] }
+itertools = "0.14.0"
 strsim = "0.11.1"
-thiserror = "1.0.63"
+thiserror = "2.0.12"
 tracing-subscriber = "0.3.18"
-moka = { version = "0.12.8", features = ["future"] }
+moka = { version = "0.12.10", features = ["future"] }
 futures = "0.3.31"
-indoc = "2.0.5"
-strum = { version = "0.26.3", features = ["derive"] }
+indoc = "2.0.6"
+strum = { version = "0.27.2", features = ["derive"] }
 
 [lints.rust]
 rust_2018_idioms = "deny"
