--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,11 @@ moka = { version = "0.12.10", features = ["future"] }
 futures = "0.3.31"
 indoc = "2.0.6"
 strum = { version = "0.27.2", features = ["derive"] }
+sqlx = { version = "0.8.6", features = [
+    "sqlite",
+    "runtime-tokio-rustls",
+    "chrono",
+] }
 
 [lints.rust]
 rust_2018_idioms = "deny"
