--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -8,7 +8,7 @@ use_try_shorthand = true
 comment_width = 100
 format_code_in_doc_comments = true
 imports_granularity = "Crate"
-imports_layout = "Vertical"
+imports_layout = "HorizontalVertical"
 wrap_comments = true
 group_imports = "StdExternalCrate"
 format_macro_bodies = true
