--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "gaia"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -32,6 +32,7 @@ sqlx = { version = "0.8.6", features = [
     "runtime-tokio-rustls",
     "chrono",
 ] }
+reqwest = "0.12.23"
 
 [lints.rust]
 rust_2018_idioms = "deny"
