--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["full"] }
 tracing = "0.1.41"
-warframe = { version = "7.0.1", features = ["full"] }
+warframe = { git = "https://github.com/WFCD/warframe.rs", branch = "v8", features = [
+    "full",
+] }
 arbitration_data = { git = "https://github.com/Mettwasser/arbitration_data", version = "0.2.0" }
 poise_paginator = { git = "https://github.com/Mettwasser/poise_paginator", version = "0.1.1" }
 csv = "1.3.1"
