--- a/.github/workflows/ghcr.yaml
+++ b/.github/workflows/ghcr.yaml
@@ -8,10 +8,21 @@ on:
 jobs:
     build_and_publish:
         runs-on: ubuntu-latest
+        permissions:
+          contents: read
+          packages: write
         steps:
-            - uses: actions/checkout@v3
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Log in to GitHub Container Registry
+              uses: docker/login-action@v3
+              with:
+                registry: ghcr.io
+                username: ${{ github.actor }}
+                password: ${{ secrets.GITHUB_TOKEN }}
+
             - name: Build and push the image
               run: |
-                docker login --username mettwasser --password ${{ secrets.GHCR_LOGIN }} ghcr.io
                 docker build . --tag ghcr.io/mettwasser/gaia:latest
                 docker push ghcr.io/mettwasser/gaia:latest
