--- a/.github/workflows/ghcr.yaml
+++ b/.github/workflows/ghcr.yaml
@@ -15,14 +15,8 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
-            - name: Log in to GitHub Container Registry
-              uses: docker/login-action@v3
-              with:
-                registry: ghcr.io
-                username: ${{ github.actor }}
-                password: ${{ secrets.GITHUB_TOKEN }}
-
             - name: Build and push the image
               run: |
+                docker login --username mettwasser --password ${{ secrets.GITHUB_TOKEN }} ghcr.io
                 docker build . --tag ghcr.io/mettwasser/gaia:latest
                 docker push ghcr.io/mettwasser/gaia:latest
