--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,11 @@
 **/target/
 **/Cargo.lock
 
+/rust-toolchain.toml
+/notifier_architecture.excalidraw
+/README.md
+/rustfmt.toml
+
 # IDE files
 .vscode/settings.json
 .vscode/launch.json
